Trying to make the navbar more responsive

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -5,6 +5,7 @@
 }
 
 body {
+  min-height: 100vh;
   font-family: "roboto", "sans-serif";
   background-color: #e2c20e;
   font-family: "Pixelify Sans";
