--- a/frontend/src/Styles/navStyles.css
+++ b/frontend/src/Styles/navStyles.css
@@ -21,6 +21,10 @@ nav a {
   color: #745e96;
 }
 
+nav a:hover {
+  background-color: #694c94;
+}
+
 nav li:first-child {
   margin-right: auto;
 }
@@ -32,12 +36,41 @@ nav li:first-child {
   height: 100vh;
   width: 250px;
   z-index: 999;
-  background-color: #745e96;
-  display: flex;
+  background-color: #745e96b1;
+  backdrop-filter: blur(10px);
+  display: none;
   flex-direction: column;
   align-items: flex-start;
   justify-content: flex-start;
 }
+
 .sidebar a {
-  color: hotpink;
+  color: red;
+}
+
+.sidebar li {
+  width: 100%;
+}
+
+.sidebar a {
+  width: 100%;
+}
+
+.menu_button {
+  display: none;
+}
+
+@media (max-width: 800px) {
+  .hideOnSmallScreens {
+    display: none;
+  }
+  .menu_button {
+    display: block;
+  }
+}
+
+@media (max-width: 400px) {
+  .sidebar {
+    width: 100%;
+  }
 }
