--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -8,5 +8,5 @@ body {
   min-height: 100vh;
   font-family: "roboto", "sans-serif";
   background-color: #e2c20e;
-  font-family: "Pixelify Sans";
+  font-family: "'Pixelify Sans', sans-serif";
 }
