--- a/frontend/src/Styles/card.css
+++ b/frontend/src/Styles/card.css
@@ -1,7 +1,6 @@
-.card {
+/* .card {
   position: relative;
   max-width: 20rem;
-  /* max-height: 70vh; */
   overflow: hidden;
   border-radius: 1rem;
   box-shadow: 0 10px 15px rgba(0, 0, 0, 0.1);
@@ -26,4 +25,49 @@
   background: linear-gradient(to top, rgba(0, 0, 0, 0.993), transparent);
   padding: 1rem;
   margin-top: 200px;
+} */
+
+.card_container {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  margin-top: 100px;
+}
+
+.card {
+  width: 325px;
+  background-color: #f0f0f0;
+  border-radius: 8px;
+  overflow: hidden;
+  box-shadow: 0 2px 4px rgb(0, 0, 0, 0.2);
+  margin: 20px;
+}
+
+.card img {
+  width: 100%;
+  height: auto;
+}
+
+.card_content {
+  padding: 16px;
+}
+
+.card_content h3 {
+  font-size: 28px;
+  margin-bottom: 8px;
+}
+
+.card_content p {
+  color: #666;
+  font-size: 15px;
+  line-height: 1.3;
+}
+
+.card_content .btn {
+  background-color: #373434;
+  color: #fff;
+  text-decoration: none;
+  padding: 8px 16px;
+  border-radius: 4px;
+  display: inline-block;
 }
