--- a/frontend/src/Styles/navStyles.css
+++ b/frontend/src/Styles/navStyles.css
@@ -1,5 +1,6 @@
 nav {
-  background-color: hotpink;
+  background-color: rgb(51, 46, 46);
+  padding: 8px 8px;
 }
 nav ul {
   width: 100%;
@@ -22,7 +23,7 @@ nav a {
   text-decoration: none;
   display: flex;
   align-items: center;
-  color: #745e96;
+  color: #1ac130;
 }
 
 nav li:hover {
