--- a/frontend/src/Styles/card.css
+++ b/frontend/src/Styles/card.css
@@ -36,11 +36,16 @@
 
 .card {
   width: 300px;
-  background-color: #f0f0f0;
+  background-color: rgb(51, 46, 46);
   border-radius: 8px;
   overflow: hidden;
   box-shadow: 0 2px 4px rgb(0, 0, 0, 0.2);
   margin: 20px;
+  transition: transform 0.5s ease-in-out;
+}
+
+.card:hover {
+  transform: scale(1.1);
 }
 
 .card img {
@@ -53,21 +58,42 @@
 }
 
 .card_content h3 {
-  font-size: 28px;
+  color: #1ac130;
+  font-size: 20px;
   margin-bottom: 8px;
 }
 
 .card_content p {
-  color: #666;
+  /* color: #666; */
+  color: #1ac130;
   font-size: 15px;
   line-height: 1.3;
 }
 
 .card_content .btn {
-  background-color: #373434;
-  color: #fff;
+  /* background-color: #373434; */
+  background-color: black;
+  color: hotpink;
   text-decoration: none;
   padding: 8px 16px;
   border-radius: 4px;
   display: inline-block;
+}
+
+.deletionEdit {
+  display: flex;
+}
+
+.icons {
+  padding: 0 10px;
+  margin-top: 10px;
+  margin-left: auto;
+}
+
+.icon1:hover {
+  color: #1ac130;
+}
+
+.icon2:hover {
+  color: #1ac130;
 }
