--- a/frontend/src/Styles/navStyles.css
+++ b/frontend/src/Styles/navStyles.css
@@ -15,6 +15,7 @@ nav li {
   font-weight: bold;
   font-size: medium;
   font-family: "Pixelify Sans", "sans-serif";
+  border-radius: 10px;
 }
 
 nav a {
@@ -27,7 +28,8 @@ nav a {
 }
 
 nav li:hover {
-  background-color: rgb(235, 99, 167);
+  /* background-color: rgb(235, 99, 167); */
+  background-color: rgb(41, 38, 38);
   border-radius: 10px;
 }
 
