--- a/frontend/src/Styles/navStyles.css
+++ b/frontend/src/Styles/navStyles.css
@@ -14,7 +14,7 @@ nav li {
   transition: background-color 0.3s ease;
   font-weight: bold;
   font-size: medium;
-  font-family: "Pixelify Sans", "sans-serif";
+  font-family: Source Code Pro, monospace;
   border-radius: 10px;
 }
 
