Can reset the password.

--- a/backend/views/index.ejs
+++ b/backend/views/index.ejs
@@ -7,8 +7,13 @@
   </head>
   <body>
     <h1><%= email%></h1>
-    <form action="">
-      <input type="password" name="password" id="password" />
+    <form action="" method="POST">
+      <input
+        type="password"
+        name="password"
+        id="password"
+        placeholder="password"
+      /><br />
       <input
         type="password"
         name="confirm-password"
