--- a/backend/views/index.ejs
+++ b/backend/views/index.ejs
@@ -18,6 +18,7 @@
         type="password"
         name="confirm-password"
         id="confirm-password"
+        placeholder="confirm-password"
       /><br />
       <input type="submit" value="submit" />
     </form>
